# tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md
include/: window_management.h
src/: main.c  window_management.c
